<resources>
    <string name="app_name">Service Helper</string>
    <string name="country_prompt">Choose a country</string>
    <string name="title_activity_login">Sign in</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string name="title_activity_base">BaseActivity</string>
    <string name="address">Address:</string>
    <string name="date_time">Date/Time:</string>
    <string name="notes">Notes:</string>
    <string name="estimatedOrder">Order estimated</string>
    <string name="order">Order</string>
    <string name="choose">Choose</string>
    <string name="cancel">Cancel</string>
    <string name="company_name">Company Name:</string>
    <string name="service">Service:</string>
    <string name="finish">Finish</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_error_title">Sorry</string>
    <string name="thanks_title">Thank you!</string>
    <string name="thanks_content">Your order has been sent!\nThank you for using the Padie!</string>
    <string name="passwords_not_equal">Password does not match the confirm password.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_registration">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_registration_short">Registration</string>
    <string name="action_next_short">Next</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username">Username</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="error_no_providers">There are no providers.</string>
    <string name="error_loading_providers">There was a problem loading the providers.</string>
    <string name="error_loading_reviews">There was a problem loading the reviews.</string>
</resources>
