<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iskhak.servicehelper.ui.OrderSummaryActivity"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        />
    <TextView
        android:id="@+id/companyNameTV"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:background="@drawable/default_button"
        />

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        />
    <TextView
        android:id="@+id/orderSummaryTV"
        android:layout_marginTop="@dimen/half_margin"
        android:lines="7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:background="@drawable/default_button"
        />

    <Button
        android:text="@string/finish"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/default_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCancelButton"
        />
    <Button
        android:text="@string/cancel"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onFinishButton"/>

</LinearLayout>
