<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"

    tools:context=".ui.EstimatedOrderActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estimatedOrder"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/totalEstimated"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/default_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/very_big_text"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="$55" />

    <Button
        android:id="@+id/orderButton"
        android:layout_marginTop="@dimen/big_margin"
        android:background="@drawable/default_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/order"
        android:onClick="onOrderButton"
        android:textSize="20sp"
        android:textColor="@android:color/black" />
    <Button
        android:id="@+id/cancelOrderButton"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cancel"
        android:onClick="onCancelButton"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

</LinearLayout>
