<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fab_margin"
    tools:context=".ui.CleaningAddressActivity">

    <TextView
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/address"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:id="@+id/addressEdit"
        android:layout_weight="0"
        android:background="@drawable/default_button"/>

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/date_time"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/dateEdit"
            android:layout_gravity="bottom"
            android:background="@drawable/default_button"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:onClick="onDateClick"
            android:focusable="false"
            android:layout_weight="1" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:background="@drawable/default_button"
            android:ems="10"
            android:id="@+id/timeEdit"
            android:layout_gravity="center_vertical"
            android:onClick="onTimeClick"
            android:focusable="false"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/notes"/>
    <EditText
        android:id="@+id/orderNotesEdit"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="4"
        android:background="@drawable/default_button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#00ffffff"
        android:gravity="bottom">
        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:layout_weight="0"
            android:onClick="onBackButton"/>





        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:layout_weight="0"
            android:onClick="onNextButton"/>
    </LinearLayout>

</LinearLayout>
